more tests, webview

--- a/i18n/locales/en-gb/screens/viewMovie.json
+++ b/i18n/locales/en-gb/screens/viewMovie.json
@@ -4,6 +4,6 @@
   "RuntimeMin": "{{minutes}} min",
   "TotalVotes": "{{total}} votes",
   "AddToFavourites": "Add to favourites",
-  "MovieAddedToFavourites": "{{title}} added to your favourites",
+  "MovieGoWebsite": "View Website",
   "Overview": "Overview"
 }
