--- a/i18n/locales/pl/screens/viewMovie.json
+++ b/i18n/locales/pl/screens/viewMovie.json
@@ -4,6 +4,6 @@
   "RuntimeMin": "{{minutes}} minut",
   "TotalVotes": "{{total}} glosów",
   "AddToFavourites": "Dodaj do ulubionych",
-  "MovieAddedToFavourites": "{{title}} dodany do twoich ulubionych",
+  "MovieGoWebsite": "Strona internetowa",
   "Overview": "Przegląd"
 }
